alteração do appsettings

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,12 +6,12 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;database=logindb;user=root;password=root"
+    "DefaultConnection": "server=localhost;database=LoginDb;user=root;password=sua_senha"
   },
-  "Jwt": {
-    "Key": "super-secreta-chave-jwt-para-assinar-token-123456",
-    "Issuer": "EscolaAPI",
-    "Audience": "EscolaAPIUsers"
+  "JwtSettings": {
+    "Key": "your-big-secret-key-min-128-characters",
+    "Issuer": "LoginAPI",
+    "Audience": "LoginAPIUsers"
   },
   "AllowedHosts": "*"
 }
